tests/src/frontend/typechecking/invalid/vector2.sk
fun main(): void {
  void
}
fun test(): Array<Int> {
  Array[1, "", 3]
}
